commit con menu completo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Caperucita_Santos</string>
+    <string name="app_name">Caperucita_Roja</string>
     <string name="pregunta">What´s your choice?</string>
     <string name="opciona">Option A</string>
     <string name="opcionb">Option B</string>
@@ -23,4 +23,5 @@
         there. You must know the place," said Little Red Riding Hood. The wolf thought to himself: "Now there is a tasty bite for me. Just how
         are you going to catch her?" Then he said: "Listen, Little Red Riding Hood, havent you seen the beautiful flowers that are blossoming
         in the woods? \n \n Option A: Go to lake \n Option B: Go to grandmas House"</string>
+
 </resources>
