Añadifa funcionalidad al boton settings del menu principal. Metidos titulos de pantalla settings y final. Boton toggle en Settings a falta de implementarlo (codigo comentado con enlace en la parte de abajo)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
         there. You must know the place," said Little Red Riding Hood. The wolf thought to himself: "Now there is a tasty bite for me. Just how
         are you going to catch her?" Then he said: "Listen, Little Red Riding Hood, havent you seen the beautiful flowers that are blossoming
         in the woods? \n \n Option A: Go to lake \n Option B: Go to grandmas House"</string>
+    <string name="thnk">thank</string>
 
 </resources>
